@@ -26,6 +26,7 @@ This file is generated from authors.xml, do not edit it directly.
   Brent Burton
   Francisco Bustamante
   Albert Cahalan
+  Lapo Calamandrei
   George J. Carrette
   Sean Cier
   Winston Chang
@@ -123,6 +124,7 @@ This file is generated from authors.xml, do not edit it directly.
   David Neary
   David Necas
   Sven Neumann
+  Andreas Nilsson
   Stephen Robert Norris
   Tim Newsome
   Erik Nygren
@@ -163,6 +165,7 @@ This file is generated from authors.xml, do not edit it directly.
   Jakub Steiner
   Nathan Summers
   Mike Sweet
+  William Szilveszter
   Eiichi Takamori
   Tristan Tarrant
   Michael Taylor
